feat(Download): Clean and refactor