@@ -1,6 +1,7 @@
 package Download;
 
 import Utils.Logs;
+import Utils.Options;
 import org.json.JSONArray;
 import org.json.JSONObject;
 
@@ -12,36 +13,27 @@ import java.net.URLEncoder;
 import java.nio.charset.StandardCharsets;
 import java.util.LinkedList;
 
-public class GenbankOrganisms extends Downloader implements Runnable
+public class GenbankOrganisms extends Downloader
 {
 
-    private int downloaded;
-    private int totalCount;
-    private int enqueued;
-    private boolean endOfStream;
-    private int step;
-
-    private JSONArray data;
+    private int m_downloaded;
+    private int m_totalCount;
+    private int m_enqueued;
+    private boolean m_endOfStream;
 
     // Queue of retrieved organisms
-    private LinkedList<RawOrganism> dataQueue;
+    private LinkedList<RawOrganism> m_dataQueue;
 
-    private GenbankOrganisms()
-    {
+    private GenbankOrganisms() {
         // Counters
-        this.downloaded = 0;
-        this.totalCount = -1;
-        this.enqueued = 0;
+        m_downloaded = 0;
+        m_totalCount = -1;
+        m_enqueued = 0;
 
-        this.endOfStream = false;
-
-        // TODO: Put this in option
-        // Number of organisms to get on each request (max: 100000)
-        this.step = 100000;
+        m_endOfStream = false;
 
         // Initialize data
-        this.data = null;
-        this.dataQueue = new LinkedList<>();
+        m_dataQueue = new LinkedList<>();
     }
 
     /**
@@ -62,12 +54,11 @@ public class GenbankOrganisms extends Downloader implements Runnable
 
         // Add query
         String urlStr = String.format(
-                "https://www.ncbi.nlm.nih.gov/Structure/ngram?q=%s&start=%d&limit=%d",
+                "%s?q=%s&start=%d&limit=%d",
+                Options.getBaseUrl(),
                 URLEncoder.encode(request, StandardCharsets.UTF_8.name()),
-                downloaded,
-                step);
-
-        System.out.println(urlStr);
+                m_downloaded,
+                Options.getDownloadStep());
 
         try {
             return new URL(urlStr);
@@ -80,13 +71,16 @@ public class GenbankOrganisms extends Downloader implements Runnable
 
     /**
      * Get the status of the download
-     * @return True if database has been completely downloaded (else false)
+     * @return True if database has been completely m_downloaded (else false)
      */
     private boolean downloadCompleted()
     {
-        return this.totalCount != -1 && this.downloaded >= this.totalCount;
+        return m_totalCount != -1 && m_downloaded >= m_totalCount;
     }
 
+    /**
+     * Download and process next data chunk (page of step organisms)
+     */
     private void downloadNextChunk()
     {
         if (downloadCompleted()) {
@@ -94,36 +88,28 @@ public class GenbankOrganisms extends Downloader implements Runnable
         }
 
         try {
-
-            JSONObject json = toJSON(get(getURL())).getJSONObject("ngout")
-                                                   .getJSONObject("data");
+            JSONObject json = toJSON(get(getURL())).getJSONObject("ngout").getJSONObject("data");
 
             // Get total number of organisms
-            this.totalCount = json.getInt("totalCount");
+            m_totalCount = json.getInt("totalCount");
 
             // Get response content
             JSONArray dataChunk = json.getJSONArray("content");
 
             for (Object org: dataChunk) {
-                this.enqueueOrganism(new RawOrganism((JSONObject)org));
-                this.enqueued++;
+                enqueueOrganism(new RawOrganism((JSONObject)org));
+                m_enqueued++;
 
-                if (enqueued == totalCount) {
-                    endOfStream = true;
+                if (m_enqueued == m_totalCount) {
+                    m_endOfStream = true;
                 }
             }
-
-            // Append data to data object
-            if (this.data == null)
-                this.data = dataChunk;
-            else
-                this.data.join(dataChunk);
 
             // Set chunk size
             int chunkLength = dataChunk.length();
 
             // Increment number of retrieved objects
-            this.downloaded += chunkLength;
+            m_downloaded += chunkLength;
 
         } catch (Download.HTTPException|IOException e) {
             Logs.exception(e);
@@ -131,7 +117,7 @@ public class GenbankOrganisms extends Downloader implements Runnable
         }
     }
 
-    private void downloadOrganisms()
+    public void downloadOrganisms()
     {
         while (!downloadCompleted()) {
             downloadNextChunk();
@@ -139,7 +125,16 @@ public class GenbankOrganisms extends Downloader implements Runnable
     }
 
     /**
-     * Get next downloaded organism
+     * Retrieve the total number of organisms
+     * @return Total count
+     */
+    public int getTotalCount()
+    {
+        return m_totalCount;
+    }
+
+    /**
+     * Get next m_downloaded organism
      *
      * @return Data retrieved from Genbank
      * @throws InterruptedException Lock wait interruption
@@ -147,27 +142,25 @@ public class GenbankOrganisms extends Downloader implements Runnable
     public synchronized RawOrganism getNext() throws InterruptedException
     {
         // Wait until their is some data
-        while(this.dataQueue.size() == 0) {
-            System.out.println("0sized");
+        while(m_dataQueue.size() == 0) {
             wait();
         }
 
         // Dequeue
-        return this.dataQueue.remove(0);
+        return m_dataQueue.removeFirst();
     }
 
     /**
      * Add an organism to the queue
-     *
      * @param organism Organism data to enqueue
      */
     private synchronized void enqueueOrganism(RawOrganism organism)
     {
-        if(this.dataQueue.size() == 1) {
+        m_dataQueue.add(organism);
+
+        if(m_dataQueue.size() == 1) {
             notify();
         }
-        System.out.print("-");
-        this.dataQueue.add(organism);
     }
 
     /**
@@ -177,31 +170,7 @@ public class GenbankOrganisms extends Downloader implements Runnable
     public boolean hasNext()
     {
         // TODO: Don't call size() for each iteration (poor performance)
-        return !this.endOfStream || this.dataQueue.size() > 0;
-    }
-
-    public static void main(String args[])
-            throws MalformedURLException, UnsupportedEncodingException {
-
-        GenbankOrganisms go = GenbankOrganisms.getInstance();
-
-        Thread mythread = new Thread(go);
-        mythread.start();
-
-
-        new Thread(() -> {
-            int count = 0;
-            while (go.hasNext()) {
-                try {
-                    System.out.println(go.getNext().getOrganism());
-                    count++;
-                } catch (InterruptedException e) {
-                    e.printStackTrace();
-                }
-            }
-            System.out.printf("Printed %d organisms%n", count);
-        }).start();
-
+        return !m_endOfStream || m_dataQueue.size() > 0;
     }
 
     // Here SingletonHolder is static so it gets loaded in memory only
@@ -210,7 +179,7 @@ public class GenbankOrganisms extends Downloader implements Runnable
     // Locks lacks in performance causing poor access to the instance.
     private static class GenbankOrganismsHolder
     {
-        private final static GenbankOrganisms instance = new GenbankOrganisms();
+        private final static GenbankOrganisms s_INSTANCE = new GenbankOrganisms();
     }
 
     /**
@@ -219,11 +188,7 @@ public class GenbankOrganisms extends Downloader implements Runnable
      */
     public static GenbankOrganisms getInstance()
     {
-        return GenbankOrganismsHolder.instance;
+        return GenbankOrganismsHolder.s_INSTANCE;
     }
 
-    @Override
-    public void run() {
-        getInstance().downloadOrganisms();
-    }
 }
